--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,45 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+<section id="header" class="header">
+    <div class="header-cont">
+        <a href="#hero">
+            <h3 class="header-logo">yachtjet</h3>
+        </a>
+        <div class="header-nav-social">
+            <ul class="footer-navigation-list">
+                <li class="header-navigation-item"><a class="footer-a" href="#abouts">About</a>
+                </li>
+                <li class="header-navigation-item"><a class="footer-a" href="#ouryacht">Yachts</a>
+                </li>
+                <li class="header-navigation-item"><a class="footer-a" href="#reviews">Reviews</a>
+                </li>
+            </ul>
+            <ul class="header-social-list">
+                <li class="header-social-item">
+                    <a href="https://www.instagram.com/goitclub/">
+                        <svg class="social-header-icon" width="24" height="24">
+                            <use href="./img/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="header-social-item">
+                    <a href="https://www.youtube.com/c/GoIT">
+                        <svg class="social-header-icon" width="24" height="24">
+                            <use href="./img/icons.svg#icon-youtube"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="header-social-item">
+                    <a href="https://www.facebook.com/goITclub/">
+                        <svg class="social-header-icon" width="24" height="24">
+                            <use href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <a onclick="document.getElementById('window').style.display='block'" class="header-menu-open">
+            <svg width="28" height="28">
+                <use href="./img/icons.svg#icon-burger"></use>
+            </svg>
+        </a>
+    </div>
+</section>
