--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -5,7 +5,7 @@
             rgba(17, 19, 31, 0.80) 42.62%,
             rgba(17, 19, 31, 0.31) 84.12%,
             rgba(17, 19, 31, 0.00) 99.94%),
-        url(../img/hero/hero-mobile.jpg);
+        url(../img/hero/horses-hero.jpg);
     background-position: center;
     background-repeat: no-repeat;
 }
