--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,11 @@
 <section id="hero" class="hero conteiner">
     <div class="hero-content">
-        <h1 class="hero-title">Explore the High Seas with Our Luxury Yacht Rentals
+        <h1 class="hero-title">Horses World Wonderfull World
         </h1>
-        <p class="hero-text">Experience the freedom and luxury of yachting on the open seas. Choose from our
-            top-of-the-line
-            yachts and embark on an
-            unforgettable journey surrounded by breathtaking views and state-of-the-art amenities.
+        <p class="hero-text">This is progect about the Wonderfull World of horses and those who love them.
         </p>
-        <a class="hero-a" href="#rents">Yacht rental</a>
+        <p class="hero-text1">by Kseniya Novik
+        </p>
+        <a class="hero-a" href="#rents">Story List</a>
     </div>
 </section>
