--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,9 +1,9 @@
 <section id="abouts" class="conteiner">
     <div class="about">
         <div class="about-content">
-            <h2 class="about-title">YachtJet fleet is here to take you on the ultimate adventure</h2>
+            <h2 class="about-title">Konilandiya fleet is here to take you on the ultimate adventure</h2>
             <div class="about-content-text">
-                <p class="about-text-1">From spacious decks to state-of-the-art technology, our yachts are designed to
+                <p class="about-text-1">From spacious decks to state-of-the-art technology, our horses are designed to
                     provide
                     the perfect blend of luxury and
                     functionality.</p>
