--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="footer-box-nav">
             <div class="footer-logo-nav">
                 <a href="#hero">
-                    <h3 class="footer-logo">yachtjet</h3>
+                    <h3 class="footer-logo">konilandiya</h3>
                 </a>
                 <ul class="footer-navigation-list">
                     <li class="footer-navigation-item"><a class="footer-a" href="#abouts">About</a>
@@ -41,7 +41,7 @@
         <p class="footer-haslo">No matter which yacht you choose, our experienced crew will ensure that your journey is
             smooth and enjoyable.</p>
         <div class="footer-atribut-list">
-            <p class="footer-atribut">2023. Yacht Adventures</p>
+            <p class="footer-atribut">2023.Horse Adventures</p>
             <p class="footer-atribut">Privacy Police</p>
         </div>
     </div>
