--- a/src/partials/ouryachts.html
+++ b/src/partials/ouryachts.html
@@ -17,7 +17,7 @@
             <div class="our-card-content">
                 <div class="our-card-title">
                     <p class="ouryacht-name">Arrow</p>
-                    <p class="ouryacht-klass">LUXURY YAHTS</p>
+                    <p class="ouryacht-klass">LUXURY Horse</p>
                 </div>
                 <div class="our-card-capacity">
                     <ul class="our-main-list">
@@ -51,7 +51,7 @@
             <div class="our-card-content">
                 <div class="our-card-title">
                     <p class="ouryacht-name">Arrow</p>
-                    <p class="ouryacht-klass">LUXURY YAHTS</p>
+                    <p class="ouryacht-klass">LUXURY Horse</p>
                 </div>
                 <div class="our-card-capacity">
                     <ul class="our-main-list">
@@ -83,7 +83,7 @@
             <div class="our-card-content">
                 <div class="our-card-title">
                     <p class="ouryacht-name">Arrow</p>
-                    <p class="ouryacht-klass">LUXURY YAHTS</p>
+                    <p class="ouryacht-klass">LUXURY Horse</p>
                 </div>
                 <div class="our-card-capacity">
                     <ul class="our-main-list">
@@ -105,6 +105,6 @@
             </div>
         </li>
     </ul>
-    <a class="our-a" href="#rents">Yacht rental</a>
+    <a class="our-a" href="#rents">Horse rental</a>
 
 </section>
