--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,8 @@
 <section id="reviews" class="conteiner">
-    <h2 class="reviews-title">YachtJet take pride in providing the best possible service and experience to our customers
+    <h2 class="reviews-title">konilandiya take pride in providing the best possible service and experience to our
+        customers
     </h2>
-    <p class="reviews-text">Our customers have enjoyed unforgettable moments on our yachts. Don't just take our word for
+    <p class="reviews-text">Our customers have enjoyed unforgettable moments on our Horse. Don't just take our word for
         it - read
         on to find out
         what they have to say about their journey with us.</p>
