--- a/src/partials/window.html
+++ b/src/partials/window.html
@@ -1,7 +1,7 @@
 <section id="window" class="window is-open">
     <div class="header-cont">
         <a onclick="document.getElementById('window').style.display='none'" href="#hero">
-            <h3 class="window-logo">yachtjet</h3>
+            <h3 class="window-logo">konilandiya</h3>
         </a>
         <a onclick="document.getElementById('window').style.display='none'" class="header-menu-open" href="#header">
             <svg width="28" height="28">
@@ -15,7 +15,7 @@
                     class="footer-a" href="#abouts">About</a>
             </li>
             <li class="window-navigation-item"><a onclick="document.getElementById('window').style.display='none'"
-                    class="footer-a" href="#ouryacht">Yachts</a>
+                    class="footer-a" href="#ouryacht">Horses</a>
             </li>
             <li class="window-navigation-item"><a onclick="document.getElementById('window').style.display='none'"
                     class="footer-a" href="#reviews">Reviews</a>
