--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 <section id="header" class="header">
     <div class="header-cont">
         <a href="#hero">
-            <h3 class="header-logo">yachtjet</h3>
+            <h3 class="header-logo">konilandiya</h3>
         </a>
         <div class="header-nav-social">
             <ul class="footer-navigation-list">
                 <li class="header-navigation-item"><a class="footer-a" href="#abouts">About</a>
                 </li>
-                <li class="header-navigation-item"><a class="footer-a" href="#ouryacht">Yachts</a>
+                <li class="header-navigation-item"><a class="footer-a" href="#ouryacht">Horses</a>
                 </li>
                 <li class="header-navigation-item"><a class="footer-a" href="#reviews">Reviews</a>
                 </li>
