--- a/src/partials/rent.html
+++ b/src/partials/rent.html
@@ -1,6 +1,6 @@
 <section id="rents" class="conteiner rent-section">
     <div class="rent">
-        <h2 class="rent-form-title">Rent a yacht now</h2>
+        <h2 class="rent-form-title">Rent a Horse now</h2>
         <form class="rent-form">
             <input class="rent-form-input" name="user-name" type="text" pattern="[a-zA-Zа-яА-ЯіІїЇєЄ]+"
                 placeholder="Full Name" required>
