--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -18,7 +18,7 @@
         </div>
         <div class="about-blok-img">
             <picture>
-                <source srcset=" ./img/about/about-laptop2.jpg 1x, ./img/about/about-laptop2@2x.jpg 2x"
+                <source srcset=" ./img/about/about-kseniya.jpg 1x, ./img/about/about-laptop2@2x.jpg 2x"
                     media="(min-width: 1440px)">
                 <source srcset=" ./img/about/about-laptop1.jpg 1x, ./img/about/about-laptop1@2x.jpg 2x"
                     media="(min-width: 1280px)">
@@ -26,7 +26,7 @@
                     media="(min-width: 768px)">
                 <source srcset=" ./img/about/about-mobile.jpg 1x, ./img/about/about-mobile@2x.jpg 2x"
                     media="(max-width: 767px)">
-                <img src="./img/about/about-mobile.jpg" alt="yacht">
+                <img src="./img/about/about-kseniya.jpg" alt="Kseniya">
             </picture>
         </div>
     </div>
