--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -18,13 +18,13 @@
         </div>
         <div class="about-blok-img">
             <picture>
-                <source srcset=" ./img/about/about-kseniya.jpg 1x, ./img/about/about-laptop2@2x.jpg 2x"
+                <source srcset=" ./img/about/about-kseniya.jpg 1x, ./img/about/about-kseniya.jpg 2x"
                     media="(min-width: 1440px)">
-                <source srcset=" ./img/about/about-laptop1.jpg 1x, ./img/about/about-laptop1@2x.jpg 2x"
+                <source srcset=" ./img/about/about-kseniya.jpg 1x, ./img/about/about-kseniya.jpg 2x"
                     media="(min-width: 1280px)">
-                <source srcset=" ./img/about/about-tablet.jpg 1x, ./img/about/about-tablet@2x.jpg 2x"
+                <source srcset=" ./img/about/about-kseniya.jpg 1x, ./img/about/about-kseniya.jpg 2x"
                     media="(min-width: 768px)">
-                <source srcset=" ./img/about/about-mobile.jpg 1x, ./img/about/about-mobile@2x.jpg 2x"
+                <source srcset=" ./img/about/about-kseniya.jpg 1x, ./img/about/about-kseniya.jpg 2x"
                     media="(max-width: 767px)">
                 <img src="./img/about/about-kseniya.jpg" alt="Kseniya">
             </picture>
