--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -26,15 +26,15 @@
     </ol>
     <div class="adv-picture">
         <picture>
-            <source srcset="./img/advantages/advantages-laptop2.jpg 1x, ./img/advantages/advantages-laptop2@2x.jpg 2x"
+            <source srcset="./img/advantages/advantages-kseniya.jpg 1x, ./img/advantages/advantages-kseniya.jpg 2x"
                 media="(min-width: 1440px)">
-            <source srcset="./img/advantages/advantages-laptop1.jpg 1x, ./img/advantages/advantages-laptop1@2x.jpg 2x"
+            <source srcset="./img/advantages/advantages-kseniya.jpg 1x, ./img/advantages/advantages-kseniya.jpg 2x"
                 media="(min-width: 1280px)">
-            <source srcset=" ./img/advantages/advantages-tablet.jpg 1x, ./img/advantages/advantages-tablet@2x.jpg 2x"
+            <source srcset=" ./img/advantages/advantages-kseniya.jpg 1x, ./img/advantages/advantages-kseniya.jpg 2x"
                 media="(min-width: 768px)">
-            <source srcset=" ./img/advantages/advantages-mobile.jpg 1x, ./img/advantages/advantages-mobile@2x.jpg 2x"
+            <source srcset=" ./img/advantages/advantages-kseniya.jpg 1x, ./img/advantages/advantages-kseniya.jpg 2x"
                 media="(max-width: 767px)">
-            <img src="./img/advantages/advantages-mobile.jpg" alt="yacht">
+            <img src="./img/advantages/advantages-kseniya.jpg" alt="Kseniya">
         </picture>
     </div>
 </section>
