--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
                 <ul class="footer-navigation-list">
                     <li class="footer-navigation-item"><a class="footer-a" href="#abouts">About</a>
                     </li>
-                    <li class="footer-navigation-item"><a class="footer-a" href="#ouryacht">Yachts</a>
+                    <li class="footer-navigation-item"><a class="footer-a" href="#ouryacht">Horses</a>
                     </li>
                     <li class="footer-navigation-item"><a class="footer-a" href="#reviews">Reviews</a>
                     </li>
