--- a/src/partials/ourhorse.html
+++ b/src/partials/ourhorse.html
@@ -3,16 +3,15 @@
     <ul class="ouryachts-cards">
         <li class="ouryachts-card-1">
             <picture>
-                <source srcset="./img/our-yacht/our-yacht-laptop21.jpg 1x, ./img/our-yacht/our-yacht-laptop21@2x.jpg 2x"
+                <source srcset="./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
                     media="(min-width: 1440px)">
-                <source srcset="./img/our-yacht/our-yacht-laptop11.jpg 1x, ./img/our-yacht/our-yacht-laptop11@2x.jpg 2x"
+                <source srcset="./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
                     media="(min-width: 1280px)">
-                <source
-                    srcset=" ./img/our-yacht/our-yacht-tablet11.jpg 1x, ./img/our-yacht/our-yacht-tablet11@2x.jpg 2x"
+                <source srcset=" ./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
                     media="(min-width: 768px)">
-                <source srcset=" ./img/our-yacht/our-yacht-mobile1.jpg 1x, ./img/our-yacht/our-yacht-mobile1@2x.jpg 2x"
+                <source srcset=" ./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
                     media="(max-width: 767px)">
-                <img src="./img/our-yacht/our-yacht-mobile1.jpg" alt="yacht">
+                <img src="./img/our-horse/horse-1.jpg" alt="yacht">
             </picture>
             <div class="our-card-content">
                 <div class="our-card-title">
@@ -40,13 +39,13 @@
         </li>
         <li class="ouryachts-card-2">
             <picture>
-                <source srcset="./img/our-yacht/our-yacht-laptop22.jpg 1x, ./img/our-yacht/our-yacht-laptop22@2x.jpg 2x"
+                <source srcset="./img/our-horse/our-horse-2.jpg 1x, ./img/our-horse/our-horse-2.jpg 2x"
                     media="(min-width: 1440px)">
-                <source srcset="./img/our-yacht/our-yacht-laptop12.jpg 1x, ./img/our-yacht/our-yacht-laptop12@2x.jpg 2x"
+                <source srcset="./img/our-horse/our-horse-2.jpg 1x, ./img/our-horse/our-horse-2.jpg 2x"
                     media="(min-width: 1280px)">
-                <source srcset=" ./img/our-yacht/our-yacht-tablet2.jpg 1x, ./img/our-yacht/our-yacht-tablet2@2x.jpg 2x"
+                <source srcset=" ./img/our-horse/our-horse-2.jpg 1x, ./img/our-horse/our-horse-2.jpg 2x"
                     media="(min-width: 768px)">
-                <img src="./img/our-yacht/our-yacht-tablet2.jpg" alt="yacht">
+                <img src="./img/our-horse/horse-2.jpg" alt="yacht">
             </picture>
             <div class="our-card-content">
                 <div class="our-card-title">
@@ -74,11 +73,11 @@
         </li>
         <li class="ouryachts-card-3">
             <picture>
-                <source srcset="./img/our-yacht/our-yacht-laptop23.jpg 1x, ./img/our-yacht/our-yacht-laptop23@2x.jpg 2x"
+                <source srcset="./img/our-horse/our-horse-3.jpg 1x, ./img/our-horse/our-horse-3.jpg 2x"
                     media="(min-width: 1440px)">
-                <source srcset="./img/our-yacht/our-yacht-laptop13.jpg 1x, ./img/our-yacht/our-yacht-laptop13@2x.jpg 2x"
+                <source srcset="./img/our-horse/our-horse-3.jpg 1x, ./img/our-horse/our-horse-3.jpg 2x"
                     media="(min-width: 1280px)">
-                <img src="./img/our-yacht/our-yacht-laptop13.jpg" alt="yacht">
+                <img src="./img/our-horse/horse-3.jpg" alt="yacht">
             </picture>
             <div class="our-card-content">
                 <div class="our-card-title">
