--- a/src/partials/ourhorse.html
+++ b/src/partials/ourhorse.html
@@ -3,13 +3,13 @@
     <ul class="ouryachts-cards">
         <li class="ouryachts-card-1">
             <picture>
-                <source srcset="./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
+                <source srcset="./img/our-horse/horse-1.jpg 1x, ./img/our-horse/horse-1.jpg 2x"
                     media="(min-width: 1440px)">
-                <source srcset="./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
+                <source srcset="./img/our-horse/horse-1.jpg 1x, ./img/our-horse/horse-1.jpg 2x"
                     media="(min-width: 1280px)">
-                <source srcset=" ./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
+                <source srcset=" ./img/our-horse/horse-1.jpg 1x, ./img/our-horse/horse-1.jpg 2x"
                     media="(min-width: 768px)">
-                <source srcset=" ./img/our-horse/our-horse-1.jpg 1x, ./img/our-horse/our-horse-1.jpg 2x"
+                <source srcset=" ./img/our-horse/horse-1.jpg 1x, ./img/our-horse/horse-1.jpg 2x"
                     media="(max-width: 767px)">
                 <img src="./img/our-horse/horse-1.jpg" alt="yacht">
             </picture>
@@ -39,11 +39,11 @@
         </li>
         <li class="ouryachts-card-2">
             <picture>
-                <source srcset="./img/our-horse/our-horse-2.jpg 1x, ./img/our-horse/our-horse-2.jpg 2x"
+                <source srcset="./img/our-horse/horse-2.jpg 1x, ./img/our-horse/horse-2.jpg 2x"
                     media="(min-width: 1440px)">
-                <source srcset="./img/our-horse/our-horse-2.jpg 1x, ./img/our-horse/our-horse-2.jpg 2x"
+                <source srcset="./img/our-horse/horse-2.jpg 1x, ./img/our-horse/horse-2.jpg 2x"
                     media="(min-width: 1280px)">
-                <source srcset=" ./img/our-horse/our-horse-2.jpg 1x, ./img/our-horse/our-horse-2.jpg 2x"
+                <source srcset=" ./img/our-horse/horse-2.jpg 1x, ./img/our-horse/horse-2.jpg 2x"
                     media="(min-width: 768px)">
                 <img src="./img/our-horse/horse-2.jpg" alt="yacht">
             </picture>
@@ -73,9 +73,9 @@
         </li>
         <li class="ouryachts-card-3">
             <picture>
-                <source srcset="./img/our-horse/our-horse-3.jpg 1x, ./img/our-horse/our-horse-3.jpg 2x"
+                <source srcset="./img/our-horse/horse-3.jpg 1x, ./img/our-horse/horse-3.jpg 2x"
                     media="(min-width: 1440px)">
-                <source srcset="./img/our-horse/our-horse-3.jpg 1x, ./img/our-horse/our-horse-3.jpg 2x"
+                <source srcset="./img/our-horse/horse-3.jpg 1x, ./img/our-horse/horse-3.jpg 2x"
                     media="(min-width: 1280px)">
                 <img src="./img/our-horse/horse-3.jpg" alt="yacht">
             </picture>
