--- a/src/partials/rent.html
+++ b/src/partials/rent.html
@@ -13,15 +13,11 @@
     </div>
     <div class="rent-picture">
         <picture>
-            <source srcset="./img/rent/rent-laptop2.jpg 1x, ./img/rent/rent-laptop2@2x.jpg 2x"
-                media="(min-width: 1440px)">
-            <source srcset="./img/rent/rent-laptop1.jpg 1x, ./img/rent/rent-laptop1@2x.jpg 2x"
-                media="(min-width: 1280px)">
-            <source srcset=" ./img/rent/rent-tablet.jpg 1x, ./img/rent/rent-tablet@2x.jpg 2x"
-                media="(min-width: 768px)">
-            <source srcset=" ./img/rent/rent-mobile.jpg 1x, ./img/rent/rent-mobile@2x.jpg 2x"
-                media="(max-width: 767px)">
-            <img src="./img/rent/rent-mobile1.jpg" alt="yacht">
+            <source srcset="./img/rent/woman.jpg 1x, ./img/rent/woman.jpg 2x" media="(min-width: 1440px)">
+            <source srcset="./img/rent/woman.jpg 1x, ./img/rent/woman.jpg 2x" media="(min-width: 1280px)">
+            <source srcset=" ./img/rent/woman.jpg 1x, ./img/rent/woman.jpg 2x" media="(min-width: 768px)">
+            <source srcset=" ./img/rent/rent-mobile.jpg 1x, ./img/rent/woman.jpg 2x" media="(max-width: 767px)">
+            <img src="./img/rent/woman.jpg" alt="woman">
         </picture>
     </div>
 </section>
