--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -38,7 +38,7 @@
                 </li>
             </ul>
         </div>
-        <p class="footer-haslo">No matter which yacht you choose, our experienced crew will ensure that your journey is
+        <p class="footer-haslo">No matter which horse you choose, our experienced crew will ensure that your journey is
             smooth and enjoyable.</p>
         <div class="footer-atribut-list">
             <p class="footer-atribut">2023.Horse Adventures</p>
