--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="footer-box-nav">
             <div class="footer-logo-nav">
                 <a href="#hero">
-                    <h3 class="footer-logo">konilandiya</h3>
+                    <h3 class="footer-logo">koni</h3>
                 </a>
                 <ul class="footer-navigation-list">
                     <li class="footer-navigation-item"><a class="footer-a" href="#abouts">About</a>
