--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./about.css');
-@import url('./ouryachts.css');
+@import url('./ourhorse.css');
 @import url('./advantages.css');
 @import url('./rent.css');
 @import url('./reviews.css');
