--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <section id="header" class="header">
     <div class="header-cont">
         <a href="#hero">
-            <h3 class="header-logo">konilandiya</h3>
+            <h3 class="header-logo">koni</h3>
         </a>
         <div class="header-nav-social">
             <ul class="footer-navigation-list">
